File thumbnail alignment issue. Fixes #57

--- a/public/bootstrap/less/trp3Files.less
+++ b/public/bootstrap/less/trp3Files.less
@@ -6,6 +6,7 @@
 	background-size: contain;
 	border: 1px solid #ddd;
 	margin: 2px;
+  vertical-align: top;
 }
 
 .trpFileButton {
